# math_ops

./: .gitattributes  LICENCE  README.md  math_ops_gateway_build.sh  math_ops_gateway_run.sh  math_ops_service_build.sh  math_ops_service_run.sh  math_ops_ui_build.sh  math_ops_ui_run.sh
math_ops_gateway/: .dockerignore  Dockerfile  README.md  go.mod  go.sum  main.go
math_ops_gateway/boilerplate/gateway/: gateway.go
math_ops_gateway/scripts/: gen.cmd  gen.sh  get_deps.cmd  get_deps.sh
math_ops_service/: Cargo.toml  Dockerfile  README.md  build.rs
math_ops_service/src/: main.rs  math_ops.rs  math_ops_service.rs
math_ops_ui/: .gitignore  Dockerfile  package.json  tsconfig.json
math_ops_ui/public/: urls.json
math_ops_ui/src/: App.css  App.js  math_ops_rest.js  serve.sh
proto/: math_ops.proto
