[package]
name = "math_ops_service"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
prost = "0.9"
prost-types = "0.9"
tokio = { version = "1.15", features = ["full"] }
tonic = { version = "0.6", features = ["tls", "compression"] }
tonic-reflection = "0.3"
tonic-web = "0.2.0"
tokio-stream = { version =  "0.1", features = ["net"] }
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
listenfd = "0.3"
ctrlc = "3.2.1"

[build-dependencies]
anyhow = "1.0.79"
tonic-build = { version = "0.6", features = ["prost", "compression"] }
